<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.stev.smart_community.MainActivity" >

    <RelativeLayout
        android:id="@+id/main_rl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divide_line" >
    </RelativeLayout>
    
      <View 
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_ll_layout" 
        android:background="@color/gray"/>
      
      <LinearLayout
        android:id="@+id/bottom_ll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="8dp"
        android:orientation="horizontal" >
        
      	<LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_home_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_page"
                android:textSize="@dimen/menu_title_size" />
         </LinearLayout>
        
      	
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_server_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_page"
                android:textSize="@dimen/menu_title_size" />
        </LinearLayout>
      
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_community_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_page"
                android:textSize="@dimen/menu_title_size" />
        </LinearLayout>
      
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bt_me_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_page"
                android:textSize="@dimen/menu_title_size" />
        </LinearLayout>
	  </LinearLayout>
</RelativeLayout>
