<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/status_bar_size"
	    android:background="@color/status_bar" >

	    <TextView
	        android:id="@+id/me_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textColor="@color/white"
	        android:gravity="center_horizontal"
	        android:text="@string/me_title"
	        android:textSize="@dimen/text_size_24sp" />
	</RelativeLayout>
	
    <RelativeLayout 
        android:id="@+id/rl_user_info"
        android:layout_width="match_parent"
	    android:layout_height="@dimen/size_72dp"
	    android:layout_marginTop="@dimen/margin_size_10"
	    android:background="@color/white">
	    
	    <ImageView 
	        android:id="@+id/iv_user_avatar"
	        android:layout_width="@dimen/size_64dp"
	        android:layout_height="@dimen/size_64dp"
	        android:layout_marginLeft="@dimen/margin_size_14"
	        android:layout_centerVertical="true"
	        android:src="@drawable/default_avatar" />
	    
	    <TextView 
	        android:id="@+id/tv_user_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size_16sp"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/iv_user_avatar"
	        android:layout_marginLeft="@dimen/margin_size_10"
	        android:textColor="@color/red" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_my_order"
        android:layout_width="match_parent"
	    android:layout_height="@dimen/size_64dp"
	    android:layout_marginTop="@dimen/margin_size_1"
	    android:background="@color/white">
	    
	    <ImageView 
	        android:id="@+id/iv_my_order"
	        android:layout_width="@dimen/size_64dp"
	        android:layout_height="@dimen/size_64dp"
	        android:layout_marginLeft="@dimen/margin_size_14"
	        android:layout_centerVertical="true"
	        android:src="@drawable/me_order" />
	    
	    <TextView 
	        android:id="@+id/tv_my_order"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size_16sp"
	        android:layout_centerVertical="true"
	        android:text="@string/me_order"
	        android:layout_toRightOf="@id/iv_my_order"
	        android:layout_marginLeft="@dimen/margin_size_10"
	        android:textColor="@color/red" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_my_neighbor"
        android:layout_width="match_parent"
	    android:layout_height="@dimen/size_64dp"
	    android:layout_marginTop="@dimen/margin_size_16"
	    android:background="@color/white">
	    
	    <ImageView 
	        android:id="@+id/iv_my_neighbor"
	        android:layout_width="@dimen/size_64dp"
	        android:layout_height="@dimen/size_64dp"
	        android:layout_marginLeft="@dimen/margin_size_14"
	        android:layout_centerVertical="true"
	        android:src="@drawable/me_neighbor" />
	    
	    <TextView 
	        android:id="@+id/tv_my_neighbor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size_16sp"
	        android:layout_centerVertical="true"
	        android:text="@string/me_neighbor"
	        android:layout_toRightOf="@id/iv_my_neighbor"
	        android:layout_marginLeft="@dimen/margin_size_10"
	        android:textColor="@color/red" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_my_settings"
        android:layout_width="match_parent"
	    android:layout_height="@dimen/size_64dp"
	    android:layout_marginTop="@dimen/margin_size_16"
	    android:background="@color/white">
	    
	    <ImageView 
	        android:id="@+id/iv_my_settings"
	        android:layout_width="@dimen/size_64dp"
	        android:layout_height="@dimen/size_64dp"
	        android:layout_marginLeft="@dimen/margin_size_14"
	        android:layout_centerVertical="true"
	        android:src="@drawable/me_settings" />
	    
	    <TextView 
	        android:id="@+id/tv_my_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size_16sp"
	        android:layout_centerVertical="true"
	        android:text="@string/me_settings"
	        android:layout_toRightOf="@id/iv_my_settings"
	        android:layout_marginLeft="@dimen/margin_size_10"
	        android:textColor="@color/red" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_server_phone"
        android:layout_width="match_parent"
	    android:layout_height="@dimen/size_64dp"
	    android:layout_marginTop="@dimen/margin_size_1"
	    android:background="@color/white">
	    
	    <ImageView 
	        android:id="@+id/iv_server_phone"
	        android:layout_width="@dimen/size_64dp"
	        android:layout_height="@dimen/size_64dp"
	        android:layout_marginLeft="@dimen/margin_size_14"
	        android:layout_centerVertical="true"
	        android:src="@drawable/me_phone" />
	    
	    <TextView 
	        android:id="@+id/tv_server_phone"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_size_16sp"
	        android:layout_centerVertical="true"
	        android:text="@string/me_server_phone"
	        android:layout_toRightOf="@id/iv_server_phone"
	        android:layout_marginLeft="@dimen/margin_size_10"
	        android:textColor="@color/red" />
    </RelativeLayout>
</LinearLayout>
